deploy/flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    app: flask
  annotations:
    example-key: example-data

spec:
  selector:
      matchLabels:
        app: flask
  template:
    metadata:
      labels:
         app: flask
    spec:
      containers:
      - name: flask
        image: quay.io/werstatyw/flask:0.1.1
        ports: 
        - containerPort: 5000
        volumeMounts:
          - name: podinfo
            mountPath: /podinfo
            readOnly: false
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
