deploy/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubernetes.io/change-cause: deploying image 2.0.0
  creationTimestamp: "2021-12-18T19:41:24Z"
  generation: 4
  labels:
    app: flask
  name: flask
  namespace: default
  resourceVersion: "1084756"
  uid: 92f81674-c8a4-493d-a02d-b36db8c5f438
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flask
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2021-12-26T16:48:45+03:00"
      creationTimestamp: null
      labels:
        app: flask
    spec:
      containers:
      - image: quay.io/werstatyw/flask:2.0.0
        imagePullPolicy: Always
        name: flask
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: podinfo
            mountPath: /podinfo
            readOnly: false
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-12-25T15:49:52Z"
    lastUpdateTime: "2021-12-25T15:49:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-12-20T16:27:51Z"
    lastUpdateTime: "2021-12-26T21:11:01Z"
    message: ReplicaSet "flask-c5789449d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
