deploy/flask-nodeport.yml
---
# EXPORT SERVICE INTERFACE
kind: Service
apiVersion: v1
metadata:
    name: flask-service
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
      app: flask

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    run: flask
spec:
  selector:
    matchLabels:
        app: flask
  template:
    metadata:
      labels:
         app: flask
    spec:
      containers:
      - name: flask
        image: quay.io/kubernetes-for-developers/flask:0.2.0
        ports:
        - containerPort: 5000
