deploy/redis.yml
---
# EXPORT SERVICE INTERFACE
kind: Service
apiVersion: v1
metadata:
    name: redis-service
    labels:
      app: redis
      role: master
      tier: backend
spec:
#  type: NodePort
  ports:
  - port: 6379
    targetPort: 6379
  selector:
      app: redis
      role: master
      tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
         app: redis
         role: master
         tier: backend
    spec:
      containers:
      - name: redis-master
        image: redis:4
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /data
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: redis-pv-claim
